--- a/c03x_sorkin.html
+++ b/c03x_sorkin.html
@@ -11,7 +11,7 @@
 	<main>
 		<h1>Andrew Ross Sorkin, author of <em>Too Big to Fail</em></h1>
 		<h3>November 16, 2010</h3>
-		<img src="images/sorkin_desk260.jpg" alt="Sorkin Desk" height="260">
+		<img src="/images/sorkin_desk260.jpg" alt="Sorkin Desk" height="260">
 
 		<p>New York Times columnist and author, Andrew Ross Sorkin, has been described as &quot;the most famous financial journalist of his generation.&quot; His book,<em> Too Big to Fail</em>, was the first behind-the-scenes account of the financial crisis that led to our current recession.</p>
 		<p>The Economist, The Financial Times, and Business Week all named <em>Too Big to Fail</em> one of the best books of the year. The book was published by Viking October 20, 2009. The book was adapted as a movie by HBO Films and premiered on HBO on May 23, 2011.</p>
